--- a/site/_styles/header.css
+++ b/site/_styles/header.css
@@ -114,8 +114,11 @@ navbar-header-items below*/
     border: 1px solid green; 
 }
 
-/* re-set header elements to their default theme settings if flex is adequately supported */
-@supports(display: flex) and (align-items: center) and (justify-content: end) and (flex-shrink: 1) and (flex-grow: 1) and (flex-flow: wrap) {
+/* re-set header elements to their theme settings if flex is adequately supported.  
+`flex-basis: min-content` is not required, but a work around test for `column-gap: 1rem`, which is
+not possible to test for in it's flex mode directly - see https://ishadeed.com/article/flexbox-gap/
+*/
+@supports(display: flex) and (align-items: center) and (justify-content: end) and (flex-basis: min-content) {
     .bd-header {
         display: flex;
     }
