--- a/site/_styles/footer.css
+++ b/site/_styles/footer.css
@@ -1,11 +1,10 @@
 /* Footer
 -------------------------------------------------------------------------------------------------*/
-
 /* horizontally center the main footer container */
 .bd-footer,
 .bd-footer .bd-footer__inner {
     display: block;
-    /* outline: 1px solid red; */
+    border: 1px solid red;
 }
 
 /* change footer elements with `display: flex` to `display: inline-block` so they are arranged 
@@ -31,7 +30,7 @@ horizontally. */
     .bd-footer .footer-items__start,
     .bd-footer .footer-items__end {
         display: flex;
-        /* outline: 1px dashed red; */
+        border: 1px dashed red;
     }
 
     .bd-footer .footer-items__end {
